[package]
name = "simple_bitfield"
version = "0.1.7"
authors = ["ForceBru <ForceBru@users.noreply.github.com>"]
description = "Create bitfields with the same memory structure as integers using a simple macro."
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/ForceBru/simple_bitfield"
edition = "2018"
exclude = [".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
